--- a/html/dashboard/index3.html
+++ b/html/dashboard/index3.html
@@ -343,7 +343,7 @@
             <!--Nav End-->
         </div>
         <div class="conatiner-fluid content-inner mt-n5 py-0">
-<!--Contenido de la pagina AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
+            <!--Contenido de la pagina AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
             <div class="row">
                 <div class="col-xl-3 col-lg-4">
                     <div class="card">
@@ -356,19 +356,64 @@
                             <form>
                                 <div class="form-group">
                                     <label class="form-label" for="furl">Nombre(s):</label>
-                                    <input type="text" class="form-control" id="furl" placeholder="" value="Anna Sthesia" readonly>
+                                    <input type="text" class="form-control" id="furl" placeholder=""
+                                        value="Anna Sthesia" readonly>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label" for="turl">Apellidos:</label>
-                                    <input type="text" class="form-control" id="turl" value="Pérez García" readonly>
+                                    <label class="form-label" for="turl">Apellido Paterno:</label>
+                                    <input type="text" class="form-control" id="turl" value="Pérez" readonly>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label" for="instaurl">INE:</label>
-                                    <input type="text" class="form-control" id="instaurl" value="12345678A" readonly>
+                                    <label class="form-label" for="turl">Apellido Materno:</label>
+                                    <input type="text" class="form-control" id="turl" value="García" readonly>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="turl">Fecha De Nacimiento:</label>
+                                    <input type="datetime-local" class="form-control" id="exampleInputdatetime"
+                                        value="2019-12-19">
+
                                 </div>
                                 <div class="form-group mb-0">
                                     <label class="form-label" for="lurl">Negocio:</label>
-                                    <input type="text" class="form-control" id="lurl" value="Tienda de Ropa Moda Elegante" readonly>
+                                    <input type="text" class="form-control" id="lurl"
+                                        value="Tienda de Ropa Moda Elegante" readonly>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="instaurl">Numero de INE:</label>
+                                    <input type="text" class="form-control" id="instaurl" value="12345678A" readonly>
+                                </div>
+                                <div class="form-group">
+                                    <label class="form-label" for="lurl">Ine:</label>
+                                    <div class="col">
+                                        <div class="card">
+                                            <svg class="bd-placeholder-img card-img-top" width="100%" height="180"
+                                                xmlns="http://www.w3.org/2000/svg" role="img"
+                                                aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice"
+                                                focusable="false">
+                                                <image height="100%" href="imgs/IneAnimada.png" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-success"> <svg class="icon-20" width="20"
+                                        viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M12.1221 15.436L12.1221 3.39502" stroke="currentColor"
+                                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                        </path>
+                                        <path d="M15.0381 12.5083L12.1221 15.4363L9.20609 12.5083"
+                                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                        <path
+                                            d="M16.7551 8.12793H17.6881C19.7231 8.12793 21.3721 9.77693 21.3721 11.8129V16.6969C21.3721 18.7269 19.7271 20.3719 17.6971 20.3719L6.55707 20.3719C4.52207 20.3719 2.87207 18.7219 2.87207 16.6869V11.8019C2.87207 9.77293 4.51807 8.12793 6.54707 8.12793L7.48907 8.12793"
+                                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                            stroke-linejoin="round"></path>
+                                    </svg></button>
+                                </div>
+                                <hr>
+                                <div class="form-group">
+                                    <label class="form-label" for="lurl">Estado:</label>
+                                    <span class="badge rounded-pill bg-warning ">Revision</span>
+                                    <!--<span class="badge rounded-pill bg-success">Activo</span>
+                                    <span class="badge rounded-pill bg-danger">Inactivo</span>-->
                                 </div>
                             </form>
                         </div>
@@ -386,50 +431,104 @@
                                 <form>
                                     <div class="row">
                                         <div class="form-group col-md-6">
-                                            <label class="form-label" for="add1">Direccion 1:</label>
-                                            <input type="text" class="form-control" id="add1"
-                                            value="123 Main Street" readonly>
+                                            <label class="form-label" for="add1">Calle Principal:</label>
+                                            <input type="text" class="form-control" id="add1" value="123 Main Street"
+                                                readonly>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            <label class="form-label" for="add2">Direccion 2:</label>
-                                            <input type="text" class="form-control" id="add2"
-                                            value="Apt 4B" readonly>
+                                            <label class="form-label" for="add2">Cruzamiento 1:</label>
+                                            <input type="text" class="form-control" id="add2" value="Apt 4B" readonly>
                                         </div>
                                         <div class="form-group col-md-12">
-                                            <label class="form-label" for="cname">Nombre De Compañia:</label>
-                                            <input type="text" class="form-control" id="cname"
-                                            value="ABC Enterprises" readonly>
+                                            <label class="form-label" for="cname">Cruzamiento 2:</label>
+                                            <input type="text" class="form-control" id="cname" value="ABC Enterprises"
+                                                readonly>
                                         </div>
                                         <div class="form-group col-sm-12">
-                                            <label class="form-label">Estado:</label>
-                                            <input type="text" class="form-control" id="cname"
-                                            value="California" readonly>
+                                            <label class="form-label">Codigo Postal:</label>
+                                            <input type="text" class="form-control" id="cname" value="77086"
+                                                readonly>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            <label class="form-label" for="mobno">Telefono:</label>
-                                            <input type="text" class="form-control" id="mobno"
-                                            value="(760) 756 7568" readonly>
+                                            <label class="form-label" for="mobno">Colonia:</label>
+                                            <input type="text" class="form-control" id="mobno" value="Cumbres"
+                                                readonly>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            <label class="form-label" for="altconno">Telefono Alternativo(Opcional):</label>
-                                            <input type="text" class="form-control" id="altconno"
-                                            value="" readonly>
+                                            <label class="form-label" for="altconno">Localidad:</label>
+                                            <input type="text" class="form-control" id="altconno" value="Chetumal" readonly>
                                         </div>
                                         <div class="form-group col-md-6">
                                             <label class="form-label" for="email">Email:</label>
-                                            <input type="email" class="form-control" id="email" value="annasthesia@gmail.com" readonly>
+                                            <input type="email" class="form-control" id="email"
+                                                value="annasthesia@gmail.com" readonly>
                                         </div>
                                         <div class="form-group col-md-6">
-                                            <label class="form-label" for="pno">Codigo Postal:</label>
+                                            <label class="form-label" for="pno">Numero Telefonico:</label>
                                             <input type="text" class="form-control" id="pno" value="12345" readonly>
                                         </div>
-                                        <div class="form-group col-md-12">
-                                            <label class="form-label" for="city">Ciudad:</label>
-                                            <input type="text" class="form-control" id="city" value="Los Angeles" readonly>
+                                        <div class="form-group col-md-6">
+                                            <label class="form-label" for="lurl">Ingles:</label>
+                                            <div class="col">
+                                                <div class="card">
+                                                    <svg class="bd-placeholder-img card-img-top" width="100%"
+                                                        height="180" xmlns="http://www.w3.org/2000/svg" role="img"
+                                                        aria-label="Placeholder: Image cap"
+                                                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                                                        <image height="100%" href="imgs/inglescertificado.jpg" />
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <label class="form-label" for="lurl">Comprobante de domicilio:</label>
+                                            <div class="col">
+                                                <div class="card">
+                                                    <svg class="bd-placeholder-img card-img-top" width="100%"
+                                                        height="180" xmlns="http://www.w3.org/2000/svg" role="img"
+                                                        aria-label="Placeholder: Image cap"
+                                                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                                                        <image height="100%" href="imgs/comprobanteDomicilio.png" />
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <button type="submit" class="btn btn-success">Download <svg class="icon-32"
+                                                    width="32" viewBox="0 0 24 24" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M12.1221 15.436L12.1221 3.39502" stroke="currentColor"
+                                                        stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path d="M15.0381 12.5083L12.1221 15.4363L9.20609 12.5083"
+                                                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path
+                                                        d="M16.7551 8.12793H17.6881C19.7231 8.12793 21.3721 9.77693 21.3721 11.8129V16.6969C21.3721 18.7269 19.7271 20.3719 17.6971 20.3719L6.55707 20.3719C4.52207 20.3719 2.87207 18.7219 2.87207 16.6869V11.8019C2.87207 9.77293 4.51807 8.12793 6.54707 8.12793L7.48907 8.12793"
+                                                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                </svg></button>
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <button type="submit" class="btn btn-success">Download <svg class="icon-32"
+                                                    width="32" viewBox="0 0 24 24" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M12.1221 15.436L12.1221 3.39502" stroke="currentColor"
+                                                        stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path d="M15.0381 12.5083L12.1221 15.4363L9.20609 12.5083"
+                                                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path
+                                                        d="M16.7551 8.12793H17.6881C19.7231 8.12793 21.3721 9.77693 21.3721 11.8129V16.6969C21.3721 18.7269 19.7271 20.3719 17.6971 20.3719L6.55707 20.3719C4.52207 20.3719 2.87207 18.7219 2.87207 16.6869V11.8019C2.87207 9.77293 4.51807 8.12793 6.54707 8.12793L7.48907 8.12793"
+                                                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                </svg></button>
                                         </div>
                                     </div>
                                     <hr>
-                                    <button type="submit" class="btn btn-primary">Aceptar solicitud</button>
+                                    <button type="submit" class="btn btn-success">Aceptar Solicitud</button>
+                                    <button type="submit" class="btn btn-danger">Rechazar Solicitud</button>
                                 </form>
                             </div>
                         </div>
@@ -439,7 +538,7 @@
 
 
         </div>
-<!--Contenido de la pagina AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
+        <!--Contenido de la pagina AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
         <!--Termina contenido de la pagina-->
         </div>
         <!-- Footer Section Start -->
