--- a/html/dashboard/index3.html
+++ b/html/dashboard/index3.html
@@ -369,7 +369,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label" for="turl">Fecha De Nacimiento:</label>
-                                    <input type="datetime-local" class="form-control" id="exampleInputdatetime"
+                                    <input type="datetime" class="form-control" id="exampleInputdatetime"
                                         value="2019-12-19">
 
                                 </div>
