--- a/html/dashboard/index3.html
+++ b/html/dashboard/index3.html
@@ -370,7 +370,7 @@
                                 <div class="form-group">
                                     <label class="form-label" for="turl">Fecha De Nacimiento:</label>
                                     <input type="datetime" class="form-control" id="exampleInputdatetime"
-                                        value="2019-12-19">
+                                        value="2019-12-19" disabled>
 
                                 </div>
                                 <div class="form-group mb-0">
