--- a/html/dashboard/index4.html
+++ b/html/dashboard/index4.html
@@ -598,23 +598,23 @@
                                     <div class="form-card">
                                         <div class="row">
                                             <div class="col-7">
-                                                <h3 class="mb-4 text-left">Finish:</h3>
+                                                <h3 class="mb-4 text-left">Final:</h3>
                                             </div>
                                             <div class="col-5">
-                                                <h2 class="steps">Step 4 - 4</h2>
+                                                <h2 class="steps">Paso 4 - 4</h2>
                                             </div>
                                         </div>
                                         <br><br>
-                                        <h2 class="text-center text-success"><strong>SUCCESS !</strong></h2>
+                                        <h2 class="text-center text-success"><strong>ÉXITO !</strong></h2>
                                         <br>
                                         <div class="row justify-content-center">
-                                            <div class="col-3"> <img src="../../assets/images/pages/img-success.png"
+                                            <div class="col-3"> <img src="imgs/Paloma.png"
                                                     class="img-fluid" alt="fit-image"> </div>
                                         </div>
                                         <br><br>
                                         <div class="row justify-content-center">
                                             <div class="text-center col-7">
-                                                <h5 class="text-center purple-text">You Have Successfully Signed Up
+                                                <h5 class="text-center purple-text">Registro Finalizado!
                                                 </h5>
                                             </div>
                                         </div>
