--- a/html/dashboard/reclamos.html
+++ b/html/dashboard/reclamos.html
@@ -340,7 +340,6 @@
         <div class="conatiner-fluid content-inner mt-n5 py-0">
             <!--Contenido de la pagina AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA -->
             <div class="row">
-
                 <div class="col-sm-12">
                     <div class="card">
                         <div class="card-header d-flex justify-content-between">
@@ -357,8 +356,7 @@
                                             <th>Perfil</th>
                                             <th>Nombre Del Cliente</th>
                                             <th>Email</th>
-                                            <th>Estado</th>
-                                            <th>Ciudad</th>
+                                            <th>Asunto</th>
                                             <th>Paquete</th>
                                             <th>Status</th>
                                             <th>Fecha Del Reclamo</th>
@@ -373,8 +371,7 @@
                                                     alt="profile"></td>
                                             <td>Anna Sthesia</td>
                                             <td>annasthesia@gmail.com</td>
-                                            <td>Yucatan</td>
-                                            <td>Merida</td>
+                                            <td>Cobro Doble </td>
                                             <td>Paquete CA</td>
                                             <td><span class="badge bg-warning">Esperando</span></td>
                                             <td>2019/12/01</td>
@@ -385,10 +382,8 @@
                                                     <img src="https://cdn-icons-png.flaticon.com/512/1063/1063373.png"
                                                         height="20px">
                                                 </a>
-
                                             </td>
                                         </tr>
-
                                         <tr>
                                             <td class="text-center"><img
                                                     class="bg-soft-primary rounded img-fluid avatar-40 me-3"
@@ -397,8 +392,7 @@
                                             </td>
                                             <td>Lynn Guini</td>
                                             <td>lynnguini@gmail.com</td>
-                                            <td>Quintana Roo</td>
-                                            <td>Chetumal</td>
+                                            <td>Mala Experiencia De Viaje</td>
                                             <td>Paquete CB</td>
                                             <td><span class="badge bg-warning">Esperando</span></td>
                                             <td>2019/12/01</td>
