--- a/html/dashboard/FormReclamo.html
+++ b/html/dashboard/FormReclamo.html
@@ -459,8 +459,7 @@
                                         </div>
                                     </div>
                                     <hr>
-                                    <button type="submit" class="btn btn-success">Aceptar Solicitud</button>
-                                    <button type="submit" class="btn btn-danger">Rechazar Solicitud</button>
+                                    <button type="submit" class="btn btn-success">A</button>
                                 </form>
                             </div>
                         </div>
