--- a/html/dashboard/index4.html
+++ b/html/dashboard/index4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Choo Choo RouteMaker</title>
+    <title>EK-AHAN</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
@@ -30,6 +30,9 @@
     <!-- RTL Css -->
     <link rel="stylesheet" href="../assets/css/rtl.min.css" />
 
+    <!--Css Nefta-->
+      <link rel="stylesheet" href="../assets/css/NeftaCss.css" />
+
 
 </head>
 
@@ -51,28 +54,14 @@
                 <!--Logo start-->
                 <div class="logo-main">
                     <div class="logo-normal">
-                        <svg class=" icon-30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                                transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
-                                transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
-                                transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                                transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                        </svg>
+                        <div class="contenedor">
+                            <img src="imgs/icono.png" alt="Mi Icono PNG" class="imagen-adaptable">
+                        </div>
                     </div>
                     <div class="logo-mini">
-                        <svg class=" icon-30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                                transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                            <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
-                                transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                            <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
-                                transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                            <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                                transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                        </svg>
+                        <div class="contenedor">
+                            <img src="imgs/icono.png" alt="Mi Icono PNG" class="imagen-adaptable">
+                        </div>
                     </div>
                 </div>
                 <!--logo End-->
@@ -223,30 +212,14 @@
                         <!--Logo start-->
                         <div class="logo-main">
                             <div class="logo-normal">
-                                <svg class="text-primary icon-30" viewBox="0 0 30 30" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                                        transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                                    <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
-                                        transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                                    <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
-                                        transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                                    <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                                        transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                                </svg>
+                                <div class="contenedor">
+                            <img src="imgs/icono.png" alt="Mi Icono PNG" class="imagen-adaptable">
+                        </div>
                             </div>
                             <div class="logo-mini">
-                                <svg class="text-primary icon-30" viewBox="0 0 30 30" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <rect x="-0.757324" y="19.2427" width="28" height="4" rx="2"
-                                        transform="rotate(-45 -0.757324 19.2427)" fill="currentColor" />
-                                    <rect x="7.72803" y="27.728" width="28" height="4" rx="2"
-                                        transform="rotate(-45 7.72803 27.728)" fill="currentColor" />
-                                    <rect x="10.5366" y="16.3945" width="16" height="4" rx="2"
-                                        transform="rotate(45 10.5366 16.3945)" fill="currentColor" />
-                                    <rect x="10.5562" y="-0.556152" width="28" height="4" rx="2"
-                                        transform="rotate(45 10.5562 -0.556152)" fill="currentColor" />
-                                </svg>
+                                <div class="contenedor">
+                            <img src="imgs/icono.png" alt="Mi Icono PNG" class="imagen-adaptable">
+                        </div>
                             </div>
                         </div>
                         <!--logo End-->
