--- a/html/dashboard/reclamos.html
+++ b/html/dashboard/reclamos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TrenGo</title>
+    <title>EK-AHAN</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
@@ -29,6 +29,9 @@
 
     <!-- RTL Css -->
     <link rel="stylesheet" href="../assets/css/rtl.min.css" />
+
+    <!--Css Nefta-->
+      <link rel="stylesheet" href="../assets/css/NeftaCss.css" />
 
 </head>
 
@@ -99,8 +102,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="collapse" href="#sidebar-maps" role="button"
-                            aria-expanded="false" aria-controls="sidebar-maps">
+                        <a class="nav-link" aria-current="page" href="index2.html" aria-controls="sidebar-maps">
                             <i class="icon">
                                 <svg class="icon-20" width="20" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
