--- a/html/dashboard/ReclamosG.html
+++ b/html/dashboard/ReclamosG.html
@@ -507,7 +507,7 @@
                             <form>
                                 <div class="row">
                                     <div class="form-group col-md-6">
-                                        <label class="form-label" for="add1">Paquete:</label>
+                                        <label class="form-label" for="add1">Parte involucrada:</label>
                                         <input type="text" class="form-control" id="add1" value="Paquete CA"
                                             readonly>
                                     </div>
@@ -538,11 +538,11 @@
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label class="form-label" for="pno">Numero Telefonico:</label>
-                                        <input type="text" class="form-control" id="pno" value="12345" readonly>
+                                        <input type="text" class="form-control" id="pno" value="1234567890" readonly>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label class="form-label" for="pno">Numero Telefonico:</label>
-                                        <input type="text" class="form-control" id="pno" value="12345" readonly>
+                                        <input type="text" class="form-control" id="pno" value="1234567890" readonly>
                                     </div>
                                 </div>
                                 <hr>
