--- a/html/dashboard/auth/sign-inComercios.html
+++ b/html/dashboard/auth/sign-inComercios.html
@@ -76,7 +76,7 @@
                               <h4 class="logo-title ms-3">EK-AHAN</h4>
                            </a>
                            <h2 class="mb-2 text-center">Ingresar</h2>
-                           <form action="../index2.html" method="post">
+                           <form action="../indexComercios.html" method="post">
                               <div class="row">
                                  <div class="col-lg-12">
                                     <div class="form-group">
